css/main.css
html, body {
  padding: 0;
  margin: 0;
  font-family: 'Roboto Mono', monospace;
  height: 100%;
  overflow-y: hidden;
}

.folder {
  font-weight: bold;
}

#container {
  display: flex;
}

#file-tree {
  width: 300px;
  height: 100%;
  overflow-x: scroll;
  overflow-y: auto;
  padding-left: 10px;
  box-shadow: 0 2px 5px 0 rgba(0,0,0,0.16),0 2px 10px 0 rgba(0,0,0,0.12);
  z-index: 200;
  background-color: #fff;
}

#file-tree, .editor-preview, .editor-preview-side {
  font-family: 'Roboto', sans-serif;
}

#editor-container {
  flex: 1;
  height: 87%;
  word-break: break-all;
}

ul {
  padding-left: 40px;
}

ul li {
  list-style-type: disc;
}

pre {
  white-space: pre-wrap;
  word-break: break-all;
}

.editor-toolbar, .editor-toolbar.fullscreen {
  background-color: #e53935 !important;
  border: none !important;
  border-radius: 0 !important;
  box-shadow: 0 2px 5px 0 rgba(0,0,0,0.16),0 2px 10px 0 rgba(0,0,0,0.12);
  z-index: 100;
  opacity: 1 !important;
}

.editor-toolbar.fullscreen:after, .editor-toolbar.fullscreen:before {
  width: 0 !important;
}

.CodeMirror {
  background-color: #fff !important;
  border: none !important;
  border-radius: 0 !important;
  box-shadow: 0 5px 5px 0 rgba(0,0,0,0.16),0 2px 10px 0 rgba(0,0,0,0.12);
  z-index: 50;
}

.faded {
  opacity: 0.7;
}

.ic {
  border: none !important;
  border-radius: 0 !important;
  outline: none !important;
  margin: 0 2px !important;
}

.ic, .editor-toolbar a {
  color: rgba(255, 255, 255, 1) !important;
}

.ic:hover {
  background-color: #e57373 !important;
  border: none !important;
  border-radius: 0 !important;
  outline: none !important;
}

.ic.active {
  background-color: #e57373 !important;
  border: none !important;
  border-radius: 0 !important;
  outline: none !important;
}

.editor-toolbar.disabled-for-preview a:not(.no-disable) {
  background: none !important;
  opacity: 0.5;
}

.ic-format-bold:before {
  content: 'format_bold';
}

.ic-format-italic:before {
  content: 'format_italic';
}

.ic-format-quote:before {
  content: 'format_quote';
}

.ic-format-list-bulleted:before {
  content: 'format_list_bulleted';
}

.ic-format-list-numbered:before {
  content: 'format_list_numbered';
}

.ic-flip:before {
  content: 'flip';
}

.ic-fullscreen:before {
  content: 'fullscreen';
}

.ic-help:before {
  content: 'help';
}

.ic-remove-red-eye:before {
  content: 'remove_red_eye';
}

.ic-insert-link:before {
  content: 'insert_link';
}

.ic-image:before {
  content: 'image';
}

.ic-title:before {
  content: 'title';
}

.ic-folder:before {
  content: 'folder';
}

.ic-folder-open:before {
  content: 'folder_open';
}

.ic-insert-drive-file:before {
  content: 'insert_drive_file';
}

